avoid overlapping header elements

--- a/web/logbot.sass
+++ b/web/logbot.sass
@@ -886,3 +886,9 @@ body
   #nav
     #search-nav, #loc-container
       display: none
+
+@media (max-width: 1200px)
+  #nav
+    #search-nav
+      display: none
+
